<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48A0F7"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1C1CEB"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#000000">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menu_toolbar_string"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="18dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:text="@string/creative_protein_solutions_inc_menuString"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:text="@string/visit_website_menuString"
                android:textColor="#0000FF" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/device"
                android:contentDescription="@string/button_to_connect_to_a_device"
                app:srcCompat="@null" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/textView7"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/blooddropcartoonimage"
                android:contentDescription="@string/button_to_run_a_test"
                app:srcCompat="@null" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/imageButton"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/logbook_cartoon_icon"
                android:contentDescription="@string/button_to_view_logbook"
                app:srcCompat="@null" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/imageButton2"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/userlogo"
                android:contentDescription="@string/button_to_view_account"
                app:srcCompat="@null" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/imageButton3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/settingswheel"
                android:contentDescription="@string/button_to_configure_settings"
                app:srcCompat="@null" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageButton"
                android:layout_alignLeft="@id/imageButton"
                android:layout_alignRight="@id/imageButton"
                android:layout_alignStart="@id/imageButton"
                android:layout_alignEnd="@id/imageButton"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/find_a_device"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageButton2"
                android:layout_alignLeft="@id/imageButton2"
                android:layout_alignRight="@id/imageButton2"
                android:layout_alignStart="@id/imageButton2"
                android:layout_alignEnd="@id/imageButton2"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/run_a_test"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageButton3"
                android:layout_alignLeft="@id/imageButton3"
                android:layout_alignRight="@id/imageButton3"
                android:layout_alignStart="@id/imageButton3"
                android:layout_alignEnd="@id/imageButton3"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/logbook"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageButton4"
                android:layout_alignLeft="@id/imageButton4"
                android:layout_alignRight="@id/imageButton4"
                android:layout_alignStart="@id/imageButton4"
                android:layout_alignEnd="@id/imageButton4"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/account"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageButton5"
                android:layout_alignLeft="@id/imageButton5"
                android:layout_alignRight="@id/imageButton5"
                android:layout_alignStart="@id/imageButton5"
                android:layout_alignEnd="@id/imageButton5"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/configure_settings"
                android:textColor="#000000" />

        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>